Fixed overflow scrolling behavior

--- a/src/assets/stylesheets/extensions/pymdown/_arithmatex.scss
+++ b/src/assets/stylesheets/extensions/pymdown/_arithmatex.scss
@@ -34,7 +34,7 @@
     margin: 0.75em 0;
     padding: 0.75em 0;
     overflow: auto;
-    touch-action: pan-x;
+    touch-action: auto;
   }
 
   // Stretch top-level containers
